# tjtools

./: .gitignore  TODO.md  access_blocker.c  active_user.c  battery_watch.cpp  clevo_amp_control.c  meson.build
aecram/driver/: .gitignore  Makefile  driver.c
aecram/include/: aecram.h
bashrc.d/: 50-superuser.bash  51-regular-user.bash  52-thin-wrapper.bash  53-audio-tools.bash
contrib/: tjtools-9999.ebuild
contrib/gentoo/acct-group/brightness/: brightness-0.ebuild
contrib/gentoo/acct-user/brightness/: brightness-0.ebuild
contrib/gentoo/acct-user/greetd/: brightness-0.ebuild
contrib/gentoo/app-misc/tjtools/: tjtools-9999.ebuild
kdump/: busy-config  genkernel-config  linuxrc
polkit/: 10-gentoo-sandbox.rules  11-openvpn-client.rules  12-iscsi-ctrl.rules  13-cpu-powerlimit-quiet.rules  13-cpu-powerlimit.rules  14-xbox360-disable.rules  15-openvpn-server.rules
scripts/: 7z_simple.sh  backup_bootstrap.sh  build_old_samba.sh  copy_merge.sh  delayed_modprobe.sh  detect_display.sh  easy_data_nc_rx.sh  easy_data_nc_tx.sh  easy_pack.sh  easy_unpack.sh  exec_script.sh  flatpak_env_helper.sh  fstrim_gen_env.sh  gamescope-session  geeqie_ctrl.sh  greetd-session  iscsi_ctrl.sh  jupiter-biosupdate  kdump_genkernel.sh  kdump_recv.sh  linux_maintainers.sh  net_ps2.sh  openvpn_netdev.sh  pinentry.sh  pulse_bs2b.sh  remount_storage.sh  resume_wrapper.sh  session_helper.sh  steam-gamepadui-session  steamos-select-branch  steamos-session-select  steamos-update  sway-session  sway_appmenu.sh  sysfs_write.sh
src/: access_blocker.c  active_user.c  aecram_util.cpp  amd_microcode.cpp  awinic_detect.c  battery_watch.cpp  brightness_daemon.cpp  clevo_amp_control.c  container.cpp  cpu_powerlimit.cpp  evdev_keepalive.c  extract_bmi260_fw.cpp  notify_wrapper.c  speedcontrolpp.cpp  upper_sanitize.cpp  urlparse.cpp
src/brightness_utils/: common.cpp  common.h  config.h  sysfs.h
src/common_utils/: scope_guard.h  string_extra.h
systemd/: acpi-brightness.service  battery-watch.service  brightness-daemon.service  cpu-powerlimit@.service  gentoo-sandbox.service  init-com1.service  iscsi-ctrl@.service  kdump-recv.service  kdump.service  mnt-blackHole.mount  mnt-doppler.mount  mnt-universe.mount  netconsole-recv.service  pulsewide.service  razer-config@.service  unlock-container@.service  xbox360-config@.service  xbox360-disable.service
systemd/user/: clean_bashhistory.service  clean_bashhistory.timer  pulse-bs2b@.service  virtual-keyboard.service
templates/: acpi-actions.conf  brightness-daemon.conf  container.conf  cpu-powerlimits.conf  gentoo-sandbox.conf  kdump-config  kdump-recv.conf  razer-config.conf  sshpipe.json  touchpad-control.conf  wayvnc-config
udev/: 10-external-input.rules  11-razer-mouse.rules  12-serial-ir.rules  51-rfkill.rules  61-android-phone.rules  61-drm-amdgpu.rules  61-optical-drives.rules  61-usb-serial.rules  70-gamepad-controller.rules  71-uaccess-accel.rules  80-docked-mode.rules  91-fiio-bta30pro.rules
